properties of mini project changed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,31 @@
+#Accept-Language
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
+
+
+#datasource configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/first-project?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
+spring.datasource.username=root 
+spring.datasource.password=13791379mmd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2-console
+
+#Turn Statistics on and log SQL stmts
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#If want to see very extensive logging
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.stat=debug
+
+#Schema will be created using schema.sql and data.sql files
+
+spring.jpa.hibernate.ddl-auto=none
