--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.messages.encoding=UTF-8
 
 
 #datasource configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/first-project?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
+spring.datasource.url=jdbc:mysql://localhost:3306/first-project
 spring.datasource.username=root 
 spring.datasource.password=13791379mmd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
