--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.messages.encoding=UTF-8
 
 
 #datasource configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/first-project
-spring.datasource.username=root 
-spring.datasource.password=13791379mmd
+spring.datasource.url=jdbc:mysql://localhost:3306/first_project
+spring.datasource.username=spring
+spring.datasource.password=@Springtut123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
