--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,29 +3,14 @@ spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
 
-#datasource configurations
+#Datasource Configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/first_project
 spring.datasource.username=spring
 spring.datasource.password=@Springtut123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto= update
+logging.level.org.hibernate.SQL=DEBUG
 
-# Enabling H2 Console
-spring.h2.console.enabled=true
-
-# Custom H2 Console URL
-spring.h2.console.path=/h2-console
-
-#Turn Statistics on and log SQL stmts
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-#If want to see very extensive logging
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.type=trace
-logging.level.org.hibernate.stat=debug
-
-#Schema will be created using schema.sql and data.sql files
-
-spring.jpa.hibernate.ddl-auto=none
+#Exception Handler
+server.error.include-message=always
